syntax = "proto3";

package educator;

import "helpers.proto";

// 
message User {
    // 
    exonum.PublicKey key = 1;
    //
    string name = 2;
}

// 
message Class {
    // 
    exonum.PublicKey student_key = 1;
    // 
    string class_name = 2;
}

// 
message Task {
    // 
    exonum.PublicKey student_key = 1;
    // 
    string task_name = 2;
}

//
message Cert {
    //
    exonum.PublicKey student_key = 1;
    //
    string course_name = 2;
}